objects/HealthCloudGA__FilterColumn__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__FieldApi__c</fullName>
        <label>Field Api</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FieldLabel__c</fullName>
        <label>Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FilterCriterion__c</fullName>
        <label>Filter Criterion</label>
        <referenceTo>HealthCloudGA__FilterCriterion__c</referenceTo>
        <relationshipLabel>Filter Columns</relationshipLabel>
        <relationshipName>FilterColumns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ObjectName__c</fullName>
        <label>Object Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Filter Column</label>
    <nameField>
        <label>Filter Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>